[project]
name = "ctxaudit"
version = "0.1.0"
description = "Audit the invisible context tax from agent skills, rules, and instruction files across AI coding platforms."
readme = "README.md"
license = "MIT"
authors = [
    { name = "sanjeed5" }
]
requires-python = ">=3.11"
keywords = ["ai", "context", "audit", "skills", "rules", "cursor", "claude", "codex", "tokens"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.3.1",
    "tiktoken>=0.12.0",
    "rich>=14.3.3",
    "pyyaml>=6.0.3",
]

[project.urls]
Repository = "https://github.com/sanjeed5/ctxaudit"

[project.scripts]
ctxaudit = "ctxaudit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
